argo/networkpolicy-argocd-repo-server.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.4
  name: argocd-repo-server
  namespace: argo
  annotations:
    noa.re/manifest-id: 3f4be2a552d5b1ed
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argocd
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
          app.kubernetes.io/instance: argocd
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-notifications-controller
          app.kubernetes.io/instance: argocd
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-applicationset-controller
          app.kubernetes.io/instance: argocd
    ports:
    - port: repo-server
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
